--- a/qt_ui/flower_registr.ui
+++ b/qt_ui/flower_registr.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>680</width>
-    <height>560</height>
+    <height>510</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,19 +19,19 @@
   <property name="minimumSize">
    <size>
     <width>680</width>
-    <height>560</height>
+    <height>510</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>680</width>
-    <height>560</height>
+    <height>510</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLineEdit" name="name_input">
+  <widget class="QLineEdit" name="flower_name_input">
    <property name="geometry">
     <rect>
      <x>294</x>
@@ -171,14 +171,14 @@ p, li { white-space: pre-wrap; }
   </widget>
   <widget class="QPushButton" name="save_card_btn">
    <property name="enabled">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="geometry">
     <rect>
      <x>504</x>
-     <y>500</y>
+     <y>420</y>
      <width>169</width>
-     <height>51</height>
+     <height>81</height>
     </rect>
    </property>
    <property name="text">
@@ -220,7 +220,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>294</x>
-     <y>292</y>
+     <y>290</y>
      <width>197</width>
      <height>31</height>
     </rect>
@@ -273,6 +273,24 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="flower_photo_directory_lable">
+   <property name="geometry">
+    <rect>
+     <x>504</x>
+     <y>160</y>
+     <width>169</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>8</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
    </property>
   </widget>
  </widget>
