flower registr update

--- a/qt_ui/registr.ui
+++ b/qt_ui/registr.ui
@@ -238,7 +238,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Все поля обязательны к заподлнению</string>
+    <string>Все поля обязательны к заполнению</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
