--- a/qt_ui/flower_registr.ui
+++ b/qt_ui/flower_registr.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>680</width>
+    <width>800</width>
     <height>510</height>
    </rect>
   </property>
@@ -18,13 +18,13 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>680</width>
+    <width>800</width>
     <height>510</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>680</width>
+    <width>800</width>
     <height>510</height>
    </size>
   </property>
@@ -106,14 +106,17 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>518</x>
+     <x>504</x>
      <y>231</y>
-     <width>113</width>
-     <height>21</height>
+     <width>281</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>(Дневной Интервал)</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="QLabel" name="label_5">
@@ -175,9 +178,9 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="geometry">
     <rect>
-     <x>504</x>
+     <x>560</x>
      <y>420</y>
-     <width>169</width>
+     <width>183</width>
      <height>81</height>
     </rect>
    </property>
@@ -254,12 +257,12 @@ p, li { white-space: pre-wrap; }
     <string>Был посажен</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_8">
+  <widget class="QLabel" name="flowe_title">
    <property name="geometry">
     <rect>
      <x>14</x>
      <y>10</y>
-     <width>645</width>
+     <width>771</width>
      <height>41</height>
     </rect>
    </property>
@@ -280,7 +283,7 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>504</x>
      <y>160</y>
-     <width>169</width>
+     <width>281</width>
      <height>41</height>
     </rect>
    </property>
@@ -291,6 +294,113 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="text">
     <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="wrong_inputs_lable">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>14</x>
+     <y>60</y>
+     <width>771</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+     <underline>true</underline>
+    </font>
+   </property>
+   <property name="text">
+    <string>Все поля обязательны к заполнению</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="wrong_flower_name_lable">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>100</y>
+     <width>295</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>8</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+     <underline>true</underline>
+    </font>
+   </property>
+   <property name="text">
+    <string>У вас уже есть цветок с таким названием</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="wrong_date_lable_1">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>290</y>
+     <width>295</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>8</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+     <underline>true</underline>
+    </font>
+   </property>
+   <property name="text">
+    <string>Введите реальную дату</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="wrong_date_lable_2">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>350</y>
+     <width>295</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>8</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+     <underline>true</underline>
+    </font>
+   </property>
+   <property name="text">
+    <string>Введите реальную дату</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
