--- a/qt_ui/flowerCard.ui
+++ b/qt_ui/flowerCard.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>700</width>
-    <height>440</height>
+    <height>310</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -22,13 +22,13 @@
   <property name="minimumSize">
    <size>
     <width>700</width>
-    <height>440</height>
+    <height>310</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>700</width>
-    <height>440</height>
+    <height>310</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -115,42 +115,11 @@ p, li { white-space: pre-wrap; }
 &lt;p dir='rtl' style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="change_photo_btn">
-   <property name="geometry">
-    <rect>
-     <x>550</x>
-     <y>400</y>
-     <width>141</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>10</pointsize>
-     <stylestrategy>PreferDefault</stylestrategy>
-    </font>
-   </property>
-   <property name="focusPolicy">
-    <enum>Qt::StrongFocus</enum>
-   </property>
-   <property name="acceptDrops">
-    <bool>false</bool>
-   </property>
-   <property name="whatsThis">
-    <string comment="Изменить фото растения"/>
-   </property>
-   <property name="layoutDirection">
-    <enum>Qt::LeftToRight</enum>
-   </property>
-   <property name="text">
-    <string>Изменить карточку</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="born_date">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>370</y>
+     <x>14</x>
+     <y>50</y>
      <width>211</width>
      <height>41</height>
     </rect>
@@ -172,14 +141,14 @@ p, li { white-space: pre-wrap; }
     </rect>
    </property>
    <property name="text">
-    <string>water</string>
+    <string>Был ли полит</string>
    </property>
   </widget>
   <widget class="QLabel" name="when_water">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>230</y>
+     <x>462</x>
+     <y>250</y>
      <width>231</width>
      <height>41</height>
     </rect>
@@ -199,12 +168,54 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>460</x>
      <y>90</y>
-     <width>231</width>
+     <width>99</width>
      <height>51</height>
     </rect>
    </property>
    <property name="text">
     <string>how_often_water</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="add_new_photo_btn">
+   <property name="geometry">
+    <rect>
+     <x>28</x>
+     <y>270</y>
+     <width>127</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Добавить новое фото</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="how_often_water_2">
+   <property name="geometry">
+    <rect>
+     <x>574</x>
+     <y>90</y>
+     <width>113</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>(дневной интервал)</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="next_date">
+   <property name="geometry">
+    <rect>
+     <x>462</x>
+     <y>200</y>
+     <width>197</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Дата следующе поливки</string>
    </property>
   </widget>
  </widget>
