--- a/qt_ui/flowerCard.ui
+++ b/qt_ui/flowerCard.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
-    <height>310</height>
+    <width>1002</width>
+    <height>388</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -21,14 +21,20 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>700</width>
-    <height>310</height>
+    <width>1002</width>
+    <height>388</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>700</width>
-    <height>310</height>
+    <width>1002</width>
+    <height>16777215</height>
+   </size>
+  </property>
+  <property name="sizeIncrement">
+   <size>
+    <width>0</width>
+    <height>0</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -37,10 +43,10 @@
   <widget class="QLabel" name="flower_image">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>90</y>
-     <width>200</width>
-     <height>200</height>
+     <x>28</x>
+     <y>81</y>
+     <width>295</width>
+     <height>291</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -56,9 +62,9 @@
   <widget class="QLabel" name="flower_name">
    <property name="geometry">
     <rect>
-     <x>280</x>
+     <x>10</x>
      <y>10</y>
-     <width>151</width>
+     <width>925</width>
      <height>40</height>
     </rect>
    </property>
@@ -95,8 +101,8 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>90</y>
+     <x>336</x>
+     <y>121</y>
      <width>200</width>
      <height>200</height>
     </rect>
@@ -115,14 +121,21 @@ p, li { white-space: pre-wrap; }
 &lt;p dir='rtl' style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
-  <widget class="QLabel" name="born_date">
+  <widget class="QLabel" name="planted_date">
    <property name="geometry">
     <rect>
-     <x>14</x>
-     <y>50</y>
-     <width>211</width>
+     <x>350</x>
+     <y>71</y>
+     <width>533</width>
      <height>41</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>14</pointsize>
+     <weight>50</weight>
+     <bold>false</bold>
+    </font>
    </property>
    <property name="text">
     <string>when_planted</string>
@@ -134,11 +147,18 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>160</y>
-     <width>221</width>
-     <height>31</height>
+     <x>560</x>
+     <y>181</y>
+     <width>435</width>
+     <height>21</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>14</pointsize>
+     <weight>50</weight>
+     <bold>false</bold>
+    </font>
    </property>
    <property name="text">
     <string>Был ли полит</string>
@@ -147,10 +167,10 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="when_water">
    <property name="geometry">
     <rect>
-     <x>462</x>
-     <y>250</y>
-     <width>231</width>
-     <height>41</height>
+     <x>560</x>
+     <y>281</y>
+     <width>435</width>
+     <height>50</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -159,6 +179,11 @@ p, li { white-space: pre-wrap; }
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>14</pointsize>
+    </font>
+   </property>
    <property name="text">
     <string>when water</string>
    </property>
@@ -166,11 +191,28 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="how_often_water">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>90</y>
-     <width>99</width>
-     <height>51</height>
+     <x>560</x>
+     <y>110</y>
+     <width>435</width>
+     <height>50</height>
     </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>435</width>
+     <height>0</height>
+    </size>
+   </property>
+   <property name="sizeIncrement">
+    <size>
+     <width>435</width>
+     <height>0</height>
+    </size>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>14</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>how_often_water</string>
@@ -179,43 +221,50 @@ p, li { white-space: pre-wrap; }
   <widget class="QPushButton" name="add_new_photo_btn">
    <property name="geometry">
     <rect>
-     <x>28</x>
-     <y>270</y>
-     <width>127</width>
-     <height>23</height>
+     <x>336</x>
+     <y>331</y>
+     <width>141</width>
+     <height>29</height>
     </rect>
    </property>
    <property name="text">
     <string>Добавить новое фото</string>
    </property>
   </widget>
-  <widget class="QLabel" name="how_often_water_2">
-   <property name="geometry">
-    <rect>
-     <x>574</x>
-     <y>90</y>
-     <width>113</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>(дневной интервал)</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
   <widget class="QLabel" name="next_date">
    <property name="geometry">
     <rect>
-     <x>462</x>
-     <y>200</y>
-     <width>197</width>
-     <height>51</height>
+     <x>560</x>
+     <y>220</y>
+     <width>435</width>
+     <height>50</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>14</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Дата следующе поливки</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="reload_btn">
+   <property name="geometry">
+    <rect>
+     <x>952</x>
+     <y>10</y>
+     <width>43</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>20</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>⭮</string>
    </property>
   </widget>
  </widget>
