--- a/qt_ui/flower_card.ui
+++ b/qt_ui/flower_card.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>Form</class>
  <widget class="QWidget" name="Form">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="enabled">
    <bool>true</bool>
   </property>
@@ -56,7 +59,10 @@
     </sizepolicy>
    </property>
    <property name="text">
-    <string>image</string>
+    <string>Тут нет вашего изображение, возможно вы его удалили.</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
    </property>
   </widget>
   <widget class="QLabel" name="flower_name">
