--- a/qt_ui/login.ui
+++ b/qt_ui/login.ui
@@ -72,7 +72,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Регестрация</string>
+    <string>Регbстрация</string>
    </property>
   </widget>
   <widget class="QPushButton" name="log_in_btn">
