--- a/qt_ui/flower_registr.ui
+++ b/qt_ui/flower_registr.ui
@@ -106,14 +106,22 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
+  <widget class="QLabel" name="wrong_timedelta">
    <property name="geometry">
     <rect>
-     <x>322</x>
+     <x>280</x>
      <y>260</y>
-     <width>169</width>
+     <width>253</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <italic>false</italic>
+     <bold>true</bold>
+     <underline>false</underline>
+    </font>
    </property>
    <property name="text">
     <string>(Дневной Интервал)</string>
